--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,6 +80,47 @@ header .menu-icon {
     align-items: center;
     cursor: pointer;
 }
+/*HERO*/
+.hero .container {
+    display: flex;
+}
+.hero .left-side,
+.hero .right-side {
+    flex: 1;
+}
+.hero .left-side {
+    padding-bottom: 150px;
+}
+.hero .right-side {
+    text-align: center;
+}
+.hero .right-side img {
+    width: auto;
+    height: 600px;
+}
+.hero h1 {
+    font-family: 'Calistoga', sans-serif;
+    font-size: 72px;
+    line-height: 74px;
+    font-weight: 400;
+    margin-top: 40px;
+}
+.hero p {
+    font-size: 20px;
+    line-height: 26px;
+    margin: 40px 0;
+}
+.hero .button {
+    display: inline-block;
+    background-color: #fe6a0f;
+    padding: 10px 40px;
+    border-radius: 5px;
+    font-weight: 500;
+    color: #fff;
+}
+.hero .button:hover {
+    opacity: 0.7;
+}
 .menu-icon .bar-menu {
     width: 30px;
     height: 6px;
@@ -91,5 +132,23 @@ header .menu-icon {
     }
     header .menu {
         display: flex;
+    }
+    .hero .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .hero h1 {
+        font-size: 44px;
+        line-height: 50px;
+    }
+    .hero .left-side {
+        text-align: center;
+        padding-bottom: 40px;
+    }
+    .hero .right-side {
+        padding-bottom: 30px;
+    }
+    .hero .right-side img {
+        height: 270px;
     }
 }
