--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,8 @@
     list-style: none;
     text-decoration: none;
     font-size: 18px;
+    outline: none;
+    border: 0;
 }
 body {
     font-family: 'Inter', sans-serif;
@@ -126,6 +128,50 @@ header .menu-icon {
     height: 6px;
     background-color: #fff;
 }
+/*SEARCH*/
+.search {
+    background-color: #1f1f1f;
+    padding: 80px 0;
+    margin-top: -100px;
+}
+.search--title {
+    font-size: 32px;
+    font-weight: 500;
+}
+.search--sides {
+    display: flex;
+    margin-top: 30px;
+    gap: 150px
+}
+.search--sides .left-side,
+.search--sides .right-side {
+    flex: 1;
+}
+.search input,
+.search select {
+    width: 100%;
+    background-color: #2b2b2b;
+    color: #fff;
+    font-size:24px;
+    padding: 20px;
+    border-radius: 5px;
+}
+.search input {
+    background-image: url('../images/searchIcon.png');
+    background-repeat: no-repeat;
+    background-position: 20px center;
+    padding-left: 60px;
+    cursor: pointer;
+}
+.search select {
+    border-right: 20px solid transparent;
+}
+
+
+
+
+
+
 @media (max-width: 820px) {
     header nav {
         display: none;
@@ -150,5 +196,15 @@ header .menu-icon {
     }
     .hero .right-side img {
         height: 270px;
+    }
+    .search {
+        padding-bottom: 40px;
+    }
+    .search--title {
+        text-align: center;
+    }
+    .search--sides {
+        flex-direction: column;
+        gap: 20px;
     }
 }
