--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -166,8 +166,56 @@ header .menu-icon {
 .search select {
     border-right: 20px solid transparent;
 }
-
-
+/* PRODCTS */
+.products-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin: 40px 0;
+}
+.product--item {
+    display: block;
+    border-radius: 8px;
+    overflow: hidden;
+    color: #fff;
+    position:relative
+}
+.product--item:hover {
+    opacity: 0.8;
+}
+.product--item .warning {
+    position:absolute;
+    top: 30px;
+    left: 30px;
+    background-color: #fe6a0f;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 10px;
+    border-radius: 5px;
+}
+.product--item .photo {
+    text-align: center;
+    background-color: #2b2b2b;
+    padding: 30px 0;
+}
+.product--item .photo img {
+    max-width: 100%;
+}
+.product--item .product-info {
+    background-color: #1f1f1f;
+    padding: 60px 30px 30px 30px;
+    margin-top: -70px;
+}
+.product--item .product--name {
+    font-family: 'Calistoga', sans-serif;
+    font-weight: 500;
+    font-size: 32px;
+    margin: 15px 0;
+}
+.product--item .product--price {
+    font-size: 28px;
+    color: #fe6a0f;
+}
 
 
 
@@ -206,5 +254,13 @@ header .menu-icon {
     .search--sides {
         flex-direction: column;
         gap: 20px;
+    }
+    .products-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media (max-width: 500px) {
+    .products-grid {
+        grid-template-columns: 1fr;
     }
 }
