--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -216,10 +216,19 @@ header .menu-icon {
     font-size: 28px;
     color: #fe6a0f;
 }
-
-
-
-
+footer {
+    background-color: #1f1f1f;
+}
+footer .container {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 20px;
+    gap: 10px;
+}
+.copyright {
+    display: block;
+    color: #5f5f5f;
+}
 @media (max-width: 820px) {
     header nav {
         display: none;
@@ -263,4 +272,9 @@ header .menu-icon {
     .products-grid {
         grid-template-columns: 1fr;
     }
+    footer .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    
 }
